--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.epcqrgenerator.app.epcqrgenerator">
+    package="com.epcqrgenerator.app">
    <application
         android:label="epcqrgenerator"
         android:name="${applicationName}"
