--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_form_builder: ^7.1.1
   form_builder_validators: ^8.1.1
-  qr: 
-    git: https://github.com/kevmoo/qr.dart
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
